Salesforce Training org/objects/Logs_For_Flow__c.object
<CustomObject>
    <fields>
        <fullName>Debug_Messages__c</fullName>
        <label>Debug Messages</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Flow_Name__c</fullName>
        <label>Flow Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Element_Name__c</fullName>
        <label>Next Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Element_Name__c</fullName>
        <label>Previous Element Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Logs For Flow</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Flow_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Next_Element_Name__c</columns>
        <columns>Previous_Element_Name__c</columns>
        <columns>Record_ID__c</columns>
        <columns>Debug_Messages__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LFF-{00000}</displayFormat>
        <label>Logs For Flow #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Logs For Flows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>